[project]
name = "unit-converter"
version = "0.1.0"
description = "A Python library for unit conversion"
authors = [{ name = "Yasunobu Nonaka", email = "nyasunobu271@gmail.com"}]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
